Update redirect URL in index.html

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <title>Redirecting...</title>
     <!-- 0 = 立刻跳轉；如果想 3 秒後才跳，可以改成 3 -->
-    <meta http-equiv="refresh" content="0; url=https://www.wankeegroup.com.hk/site/sports/home/location.html/">
+    <meta http-equiv="refresh" content="0; url=https://forms.gle/HSkZqgeEcTeJtnUU8/">
   </head>
   <body>
     <p>如果沒有自動跳轉，請點這個連結：
-      <a href="https://www.wankeegroup.com.hk/site/sports/home/location.html/">前往新頁面</a>
+      <a href="https://forms.gle/HSkZqgeEcTeJtnUU8/">前往新頁面</a>
     </p>
   </body>
 </html>
